--- a/testapp/behat.yml
+++ b/testapp/behat.yml
@@ -3,3 +3,4 @@ default:
     EnliteBehatExtension\Zf2Extension:
       module: Application
       config: config/application.config.php
+      environment: test
